tests/macros/input/page_size.rs
fn main() {
    inquisition::questions![Input { page_size: todo!() }];
}
